--- a/src/app/home/components/movie-list/movie-list.component.html
+++ b/src/app/home/components/movie-list/movie-list.component.html
@@ -1,9 +1,14 @@
-<ol>
+<ol class="flex flex-wrap">
   <li
-    class="p-4 shadow-md m-2 flex items-center justify-center gap-3"
-    *ngFor="let movie of movies | async"
+    class="w-52 p-4 shadow-md m-2 flex transition hover:scale-[1.1] cursor-pointer ease-in-out"
+    *ngFor="let movie of movies$ | async"
   >
-    <img [src]="movie.poster_path" alt="movie_poster" />
-    <p>{{ movie.original_title | titlecase }}</p>
+    <a
+      class="flex flex-col gap-4 items-center"
+      routerLink="movies/{{ movie.id }}"
+    >
+      <img class="w-44" [src]="movie.poster_path" alt="movie_poster" />
+      <p class="text-center">{{ movie.original_title | titlecase }}</p>
+    </a>
   </li>
 </ol>
