--- a/src/app/home/pages/movie-details-page/movie-details-page.component.html
+++ b/src/app/home/pages/movie-details-page/movie-details-page.component.html
@@ -1,9 +1,35 @@
-<h1>This is a Movie details page!</h1>
 <div
   *ngIf="movieDetail$ | async as movie"
-  class="flex flex-col items-center justify-evenly gap-5"
+  class="flex flex-col justify-evenly gap-5 p-16 text-blue-950"
 >
-  <h2>{{ movie.title }}</h2>
-  <img class="w-1/3" [src]="movie.backdrop_path" alt="image" />
-  <p class="w-1/3 text-xl">{{ movie.overview }}</p>
+  <p class="text-3xl">
+    {{ movie.title }} <span class="text-xl">({{ movie.original_title }})</span>
+  </p>
+
+  <div class="flex gap-12">
+    <img class="w-2/3" [src]="movie.backdrop_path" alt="image" />
+    <div class="flex w-2/3 gap-5 flex-col text-xl">
+      <p>
+        Release date:
+        <span class="font-bold">{{ movie.release_date }}</span>
+      </p>
+      <p>
+        Vote average:
+        <span class="font-bold">{{ movie.vote_average }}</span>
+      </p>
+      <p>
+        Vote count:
+        <span class="font-bold">{{ movie.vote_count }}</span>
+      </p>
+      <p>
+        Popularity:
+        <span class="font-bold">{{ movie.popularity }}</span>
+      </p>
+      <p>
+        Original language:
+        <span class="font-bold">{{ movie.original_language }}</span>
+      </p>
+    </div>
+  </div>
+  <p class="w-2/3 text-xl">{{ movie.overview }}</p>
 </div>
