--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,14 @@
   class="flex items-center justify-center flex-col bg-gray-100 min-h-screen"
 >
   <nav class="p-6 bg-blue-950 w-full flex items-center justify-center">
-    <div class="w-2/3 flex items-center gap-5 text-white text-xl">
+    <div class="w-2/3 flex items-center gap-5 text-white text-lg">
       <a routerLink="/popular" class="flex items-center justify-center"
         ><mat-icon fontIcon="home"
       /></a>
       <a routerLink="/upcoming" routerLinkActive="underline">Upcoming</a>
       <a routerLink="/top_rated" routerLinkActive="underline">Top rated</a>
       <a routerLink="/now_playing" routerLinkActive="underline">Now playing</a>
-      <a>Profile</a>
+      <a>Favourites</a>
     </div>
   </nav>
   <div class="w-2/3 h-fit m-auto relative p-6 bg-white shadow-md">
