--- a/src/app/home/pages/movie-details-page/movie-details-page.component.html
+++ b/src/app/home/pages/movie-details-page/movie-details-page.component.html
@@ -1,5 +1,5 @@
 <div
-  *ngIf="movieDetail as movie; else loading"
+  *ngIf="movieDetail$ | async as movie; else loading"
   class="flex flex-col justify-evenly gap-5 p-16 text-blue-950"
 >
   <p class="text-3xl">
@@ -30,22 +30,11 @@
         <span class="font-bold">{{ movie.original_language }}</span>
       </p>
 
-      <button
-        class="bg-blue-950 p-3 text-white hover:scale-[1.1] transition ease-in-out"
-        (click)="
-          movieStates.favorite
-            ? handleFavoriteState(false)
-            : handleFavoriteState(true)
-        "
-      >
-        {{
-          movieStates.favorite ? "Remove from favorites" : "Add to favorites"
-        }}
-      </button>
-
-      <p *ngIf="pageEventResult$ | async as result">
-        ! {{ result.status_message }} !
-      </p>
+      <app-change-favourite-button
+        [data]="movieStates$ | async"
+        (favoriteStateChange)="handleFavoriteState($event)"
+        [isLoading]="changeBtnIsLoading || !data"
+      />
     </div>
   </div>
   <p class="w-2/3 text-xl">{{ movie.overview }}</p>
