--- a/src/app/movie-detail/movie-details-page.component.html
+++ b/src/app/movie-detail/movie-details-page.component.html
@@ -33,7 +33,7 @@
       <app-change-favourite-button
         [data]="movieStates$ | async"
         (favoriteStateChange)="handleFavoriteState($event)"
-        [isLoading]="changeBtnIsLoading || !data"
+        [isLoading]="changeBtnIsLoading"
       />
     </div>
   </div>
