--- a/src/app/shared/movie-list/movie-list.component.html
+++ b/src/app/shared/movie-list/movie-list.component.html
@@ -16,7 +16,7 @@
 >
   <li
     class="w-52 p-4 shadow-md m-2 flex transition hover:scale-[1.1] cursor-pointer ease-in-out z-0 hover:z-10"
-    *ngFor="let movie of movies"
+    *ngFor="let movie of movies.results"
   >
     <a
       class="flex flex-col gap-4 items-center"
