PrimeNG comfig. Structure refactoring. Search-banner and movie card components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 >
   <nav class="p-6 bg-blue-950 w-full flex items-center justify-center">
     <div class="w-2/3 flex items-center gap-5 text-white text-lg">
-      <a routerLink="/popular" class="flex items-center justify-center w-fit"
+      <a routerLink="/" class="flex items-center justify-center w-fit"
         ><mat-icon fontIcon="home"
       /></a>
       <button
