--- a/src/app/shared/components/movie-list/movie-list.component.html
+++ b/src/app/shared/components/movie-list/movie-list.component.html
@@ -11,20 +11,11 @@
 />
 
 <ol
-  class="flex flex-wrap w-full"
+  class="flex flex-wrap w-full gap-5"
   *ngIf="movies$ | async as movies; else loading"
 >
-  <li
-    class="w-52 p-4 shadow-md m-2 flex transition hover:scale-[1.1] cursor-pointer ease-in-out z-0 hover:z-10"
-    *ngFor="let movie of movies.results"
-  >
-    <a
-      class="flex flex-col gap-4 items-center"
-      routerLink="/movies/{{ movie.id }}"
-    >
-      <img class="w-44" [src]="movie.poster_path" alt="movie_poster" />
-      <p class="text-center">{{ movie.title | titlecase }}</p>
-    </a>
+  <li *ngFor="let movie of movies.results" class="relative">
+    <app-movie-card [movie]="movie" />
   </li>
 </ol>
 
